# zuneslayer

./: README.md
ZuneHD/zuneslayer_debug/: .0-.swp  Cargo.toml  build.rs  rust-toolchain.toml
ZuneHD/zuneslayer_debug/src/: main.rs
ZuneHD/zuneslayer_debug/src/protocol/: a.out  msg.options  msg.pb.h  msg.proto  pb.h  simple.c  simple.pb.c  simple.pb.h
ZuneHD/zuneslayer_kernel/template/: apptemplate.sln
ZuneHD/zuneslayer_kernel/template/exploiter/: Engine.cs  PayloadRunner.cs  Program.cs  exploiter.csproj
ZuneHD/zuneslayer_kernel/template/exploiter/Content/: Content.contentproj
ZuneHD/zuneslayer_kernel/template/exploiter/Properties/: AssemblyInfo.cs
ZuneHD/zuneslayer_kernel/template/nativeapp/: .main.cpp.un~  .wa.c.un~  main.cpp  nativeapp.vcproj  plugin.h  wasm.cpp  xutility.h
ZuneHD/zuneslayer_kernel/template/nativeapp/kwasm/: .gitignore  Makefile  fixes.h  main.c  platform.c  platform.h  thunk.c  thunk.h  util.c  util.h  wa.c  wa.h
ZuneHD/zuneslayer_kernel/template/nativeapp/plugin_wasm/: Cargo.toml
ZuneHD/zuneslayer_kernel/template/nativeapp/protocol/: msg.pb.c  msg.pb.h  (+1 more)
ZuneSD/zuneslayer_kernel/zune30/template/: apptemplate.ncb
browser_exploit/: index.html
tools/: Cargo.toml  README.md  rust-toolchain.toml
tools/dece/: Cargo.toml
tools/dece/eimgfs/: README.md
tools/dece/src/: fdf.rs  init_obj.rs  main.rs  wlan.rs
tools/parse/src/: parse.rs
zuneslayer_kernel/zune30/template/: apptemplate.sln
zuneslayer_kernel/zune30/template/exploiter/: NativeMethods.cs  Program.cs
zuneslayer_kernel/zune30/template/nativeapp/: nativeapp.vcproj
(+10 files in other folders)
