[package]
name = "zuneslayer_debug"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = {version = "=1.0.219", features = ["derive"]}
serde_json = "=1.0.140"
indicatif = "=0.17.11"
prost = "=0.14.1"
tracing-subscriber = "=0.3.19"
tracing = "=0.1.41"

[build-dependencies]
prost-build = "=0.14.1"